--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,31 @@
 body {
   font-family: 'Roboto', sans-serif;
 }
-  
+
+#search-button{
+    border: none;
+    background-color: white;
+}
+#magnifying-glass{
+    
+}
+input{
+    border: none;
+    border-bottom: 2px solid black;
+    font-family: 'Roboto';
+}
+
+#content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#search-container{
+    display: flex;
+    align-items: center;
+}
+
+#header{
+
+}
